fix overflow

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1846,6 +1846,7 @@ body {
 
 .cases {
   padding: 3.75rem 0;
+  overflow: hidden;
 }
 
 .cases .container {
